--- a/HTML/formulario.html
+++ b/HTML/formulario.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>EXERCICIO 1 - ODAW -WOLOLOLOLO</title>
-    <link rel="stylesheet" type="text/css" href="css_padrao.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/css_padrao.css">
   </head>
   <body>
     <div>
       <center>
-        <img src="swl.png" alt="">
+        <img src="../IMAGENS/swl.png" alt="">
       </center>
     </div>
     <hr size=6 width=80%>
