--- a/HTML/ex1_1.html
+++ b/HTML/ex1_1.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>EXERCICIO 1 - ODAW -WOLOLOLOLO</title>
   </head>
-  <body background="space.jpg">
+  <body background="../IMAGENS/space.jpg">
     <div>
       <center>
-        <img src="swl.png" alt="">
+        <img src="../IMAGENS/swl.png" alt="">
       </center>
     </div>
     <hr size=6 width=80%>
