--- a/HTML/ex1_9.html
+++ b/HTML/ex1_9.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>EXERCICIO 1 - ODAW -WOLOLOLOLO</title>
-    <link rel="stylesheet" type="text/css" href="css_padrao.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/css_padrao.css">
   </head>
   <body>
     <div >
       <center>
-        <img src="swl.png" alt="">
+        <img src="../IMAGENS/swl.png" alt="">
       </center>
     </div>
     <hr size=6 width=80%>
@@ -21,7 +21,7 @@
         <h1><font color="rgb(229,177,58)">A long time ago in a galaxy far, far away....</font></h1>
 
             <h1>???????</h1>
-          <img src="uw.png" alt="center">
+          <img src="../IMAGENS/uw.png" alt="center">
           <br><br>
           <div class="divr">
             <a href="ex1_9.html">9</a>
