--- a/HTML/ex3.html
+++ b/HTML/ex3.html
@@ -4,7 +4,7 @@
     <style>
       div {text-align: center;border:1px solid white;width:80%;background-color:black;color:rgb(229,177,58);margin-left: auto;margin-right: auto;}
       section {width:80%;margin-left: auto;margin-right: auto;}
-      body {background-image: url("space.jpg");}
+      body {background-image: url("../IMAGENS/space.jpg");}
       nav {text-align:center;width:80%;margin-left: auto;margin-right: auto;}
       aside {width:50%;color:white;}
       section {width:80%;color:white;margin-left: auto;margin-right: auto;}
