--- a/HTML/exemplo_bonito_js.html
+++ b/HTML/exemplo_bonito_js.html
@@ -10,16 +10,14 @@
 		<!-- Javascript path -->
 		<script src="../JAVASCRIPT/funcoes.js"></script>
 
-		<script src="funcoes.js"></script>
-		
 		<div class="divini">
 			<img src="../IMAGENS/swl.png" alt="">
 		</div>
 
-		<hgroup width=80%>
-		<h1 class="divini"> Bem vindo!</h1> 
+		<hr size=6 width=80%>
+		<h1 class="divini"> Bem vindo!</h1>
 		<h2 class="divini"> Que a força esteja com você!</h1>
-		</hgroup>
+		<hr size=6 width=80%>
 
 		<div class="divd">
 			<br>
