--- a/TrabalhoFinal/HTML/index.html
+++ b/TrabalhoFinal/HTML/index.html
@@ -11,14 +11,20 @@
   
 	<div>
 	    <!-- Placeholder -->
-		<div class = "divd">
+		<div class = "div_login">
 			<img src="../IMAGENS/login.png" />
 		
 	    <!-- Conteudo -->
-		  <form id="form_login" class="" action="" method="POST">
+		  <form id="form_login" class="form_login" action="" method="POST">
 			<hr>
 			<h3>Usuário</h3><input type="text" name="login" id="login" value="">
 			<h3>Senha</h3><input type="password" name="pass" id="pass" value="">
+			
+			
+			<br>
+			<br>
+			<button type="submit">Confirmar</button>
+			<br>
 			
 			<div>
 				<br>
@@ -27,9 +33,6 @@
 				<br>
 				<a href=""> Esqueci a senha! </a>
 			</div>
-			
-			<br>
-			<button type="submit">Salvar</button>   <button type="reset">Limpar</button>
 		  </form>
 	  </div>
 	</div>
